@@ -1,3 +1,8 @@
+2003-02-24  David N. Welton  <davidw@dedasys.com>
+
+	* htmlparse.tcl (::htmlparse::PrepareHtml): Use string map instead
+	of regsub.
+
 2003-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* htmlparse.tcl (::htmlparse::mapEscapes): Fixed typo (strimg ->
